--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^24.0.0",
     "@types/keyv": "^3.1.0",
     "@types/node": "^11.11.0",
+    "@types/victor": "^1.1.0",
     "@types/webpack": "^4.4.25",
     "@types/webpack-dev-middleware": "^2.0.2",
     "@types/webpack-env": "^1.13.9",
@@ -43,8 +44,10 @@
     "jest": "^24.1.0",
     "keyv": "^3.1.0",
     "ts-jest": "^23.10.5",
+    "ts-key-enum": "^2.0.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
+    "victor": "^1.1.0",
     "webpack": "^4.29.6",
     "webpack-dev-middleware": "^3.6.1",
     "webpack-hot-middleware": "^2.24.3",
